themes/openstack/scss/baremetalpage.scss
/* -- Baremetal landing -- */
@import "_cdn.scss";

/* -- General Layout ----- */

.baremetal h1, .baremetal h2, .baremetal h3, .baremetal h4, .baremetal h5, .baremetal p {
    font-family: "Open Sans", Helvetica, Arial, sans-serif;
    font-weight: 300;
    text-align: center;
    line-height: 1.3;
    color: #2A4E68;
}

.baremetal p {
    font-size: 14px;
    color: #333;
}

section.baremetal-grayback {
    background-color: #F7F7F7;
}

section.baremetal-blue {
    background-color: #2A4E68;
}

.baremetal .intro-message {
    padding: 90px 0;
}
 
.info-block {
    margin: 60px 0;
}

img.center {
    float: none;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

/* -- Hero Intro --------- */
.intro-header.baremetal {
    background: url(#{$static_images_base_url}/baremetal/baremetal-bg.jpg) no-repeat bottom center;
    background-size: cover;
    padding-bottom: 0;
}

.intro-header.baremetal .hero-message {
    text-align: left;
    padding: 60px 0 100px 0;
}

.intro-header.baremetal .hero-message h1 {
    font-size: 36px;
    color: #FFFFFF;
    letter-spacing: 0;
    text-align: left;
    margin-bottom: 20px;
}

.intro-header.baremetal .hero-message p {
    font-size: 22px;
    color: #FFFFFF;
    letter-spacing: 0;
    text-align: left;
    margin-bottom: 0px;
}

/* -- Testimonial ----- */


.image-cropper,
img.testimonial-logo,
p.testimonial-quote {
    display: block;
    float: none;
    margin: 0 auto 15px;
}

img.testimonial-logo {
    margin: 0 auto 60px;
}

p.testimonial-quote {
    font-family: 'PT Serif', serif;
    font-weight: 400;
    text-align: center;
    font-size: 20px;
    line-height: 1.5;
    max-width: 720px;
}

p.testimonial-quote:before {
    content: "";
    display: block;
    background: url("/assets/baremetal/quote-open.png") no-repeat;
    width: 34px;
    height: 27px;
    float: left;
    position: relative;
    left: -33px;
    top: -8px;
}

p.testimonial-quote:after {
    content: "";
    display: block;
    background: url("/assets/baremetal/quote-close.png") no-repeat;
    width: 34px;
    height: 27px;
    float: right;
    position: relative;
    right: -43px;
    top: -97px;
}

.image-cropper {
    width: 128px;
    height: 128px;
    position: relative;
    overflow: hidden;
    border-radius: 50%;
    margin: 30px auto 15px;
}

.use-cases-info .col-sm-4 img {
    margin: 15px;
}

.baremetal .use-cases-info  p {
    margin: 15px 30px;
}

section.baremetal-blue h3,
section.baremetal-blue p {
    color:#ffffff!important;
}

a.red-button {
    display: block;
    text-align: center;
    color: #ffffff;
    background-color: #bc1518;
    border-radius: 5px;
    margin: 10px auto 30px;
    padding: 8px 0px;
    width: 90%;
    font-weight: normal;
    font-size: 16px;
    text-align: center;
}

.baremetal-video-wall .video-image {
    height: unset!important;
}

.baremetal-video-wall .video-wall-item{

}

.baremetal-video-wall .video-wall-item .video-caption{
    font-weight: 400;
}

.baremetal-video-wall .video-border{
    /* Rectangle 4: */
    background: #D8D8D8;
    border: 1px solid #FFFFFF;
}

.baremetal-video-wall .video-wrapper {
    margin-top: 20px;
    margin-bottom: 20px;
}

.baremetal-video-wall .play-button {
    width: 28%!important;
    display: block;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 32%!important;
    margin: auto;
}

.baremetal-blue.get-involved {
    text-align: center;
    margin-bottom: -50px;
}

/* -- 5 Columns -- */

.row.five-columns {
    margin-top: 30px;
    margin-bottom: 30px;
}

.col-xs-5th-1, .col-xs-5th-2, .col-xs-5th-3, .col-xs-5th-4 {float: left;}

.col-xs-5th-5 {float: left; width: 100%;}
  
.col-xs-5th-4 {width: 80%;}
  
.col-xs-5th-3 {width: 60%;}
  
.col-xs-5th-2 {width: 40%;}
  
.col-xs-5th-1 {width: 20%;}
  
.col-xs-5th-pull-5 {right: 100%;}
  
  .col-xs-5th-pull-4 {
    right: 80%;
  }
  
  .col-xs-5th-pull-3 {
    right: 60%;
  }
  
  .col-xs-5th-pull-2 {
    right: 40%;
  }
  
  .col-xs-5th-pull-1 {
    right: 20%;
  }
  
  .col-xs-5th-pull-0 {
    right: auto;
  }
  
  .col-xs-5th-push-5 {
    left: 100%;
  }
  
  .col-xs-5th-push-4 {
    left: 80%;
  }
  
  .col-xs-5th-push-3 {
    left: 60%;
  }
  
  .col-xs-5th-push-2 {
    left: 40%;
  }
  
  .col-xs-5th-push-1 {
    left: 20%;
  }
  
  .col-xs-5th-push-0 {
    left: auto;
  }
  
  .col-xs-5th-offset-5 {
    margin-left: 100%;
  }
  
  .col-xs-5th-offset-4 {
    margin-left: 80%;
  }
  
  .col-xs-5th-offset-3 {
    margin-left: 60%;
  }
  
  .col-xs-5th-offset-2 {
    margin-left: 40%;
  }
  
  .col-xs-5th-offset-1 {
    margin-left: 20%;
  }
  
  .col-xs-5th-offset-0 {
    margin-left: 0%;
  }

    .col-md-5th-1 col-sm-4 {
      text-align: center;
    }
  
  @media (min-width: 768px) {
    .col-sm-5th-1, .col-sm-5th-2, .col-sm-5th-3, .col-sm-5th-4 {
      float: left;
    }
  
    .col-sm-5th-5 {
      float: left;
      width: 100%;
    }
  
    .col-sm-5th-4 {
      width: 80%;
    }
  
    .col-sm-5th-3 {
      width: 60%;
    }
  
    .col-sm-5th-2 {
      width: 40%;
    }
  
    .col-sm-5th-1 {
      width: 20%;
    }
  
    .col-sm-5th-pull-5 {
      right: 100%;
    }
  
    .col-sm-5th-pull-4 {
      right: 80%;
    }
  
    .col-sm-5th-pull-3 {
      right: 60%;
    }
  
    .col-sm-5th-pull-2 {
      right: 40%;
    }
  
    .col-sm-5th-pull-1 {
      right: 20%;
    }
  
    .col-sm-5th-pull-0 {
      right: auto;
    }
  
    .col-sm-5th-push-5 {
      left: 100%;
    }
  
    .col-sm-5th-push-4 {
      left: 80%;
    }
  
    .col-sm-5th-push-3 {
      left: 60%;
    }
  
    .col-sm-5th-push-2 {
      left: 40%;
    }
  
    .col-sm-5th-push-1 {
      left: 20%;
    }
  
    .col-sm-5th-push-0 {
      left: auto;
    }
  
    .col-sm-5th-offset-5 {
      margin-left: 100%;
    }
  
    .col-sm-5th-offset-4 {
      margin-left: 80%;
    }
  
    .col-sm-5th-offset-3 {
      margin-left: 60%;
    }
  
    .col-sm-5th-offset-2 {
      margin-left: 40%;
    }
  
    .col-sm-5th-offset-1 {
      margin-left: 20%;
    }
  
    .col-sm-5th-offset-0 {
      margin-left: 0%;
    }
  }
  @media (min-width: 992px) {
    .col-md-5th-1, .col-md-5th-2, .col-md-5th-3, .col-md-5th-4 {
      float: left;
    }
  
    .col-md-5th-5 {
      float: left;
      width: 100%;
    }
  
    .col-md-5th-4 {
      width: 80%;
    }
  
    .col-md-5th-3 {
      width: 60%;
    }
  
    .col-md-5th-2 {
      width: 40%;
    }
  
    .col-md-5th-1 {
      width: 20%;
    }
  
    .col-md-5th-pull-5 {
      right: 100%;
    }
  
    .col-md-5th-pull-4 {
      right: 80%;
    }
  
    .col-md-5th-pull-3 {
      right: 60%;
    }
  
    .col-md-5th-pull-2 {
      right: 40%;
    }
  
    .col-md-5th-pull-1 {
      right: 20%;
    }
  
    .col-md-5th-pull-0 {
      right: auto;
    }
  
    .col-md-5th-push-5 {
      left: 100%;
    }
  
    .col-md-5th-push-4 {
      left: 80%;
    }
  
    .col-md-5th-push-3 {
      left: 60%;
    }
  
    .col-md-5th-push-2 {
      left: 40%;
    }
  
    .col-md-5th-push-1 {
      left: 20%;
    }
  
    .col-md-5th-push-0 {
      left: auto;
    }
  
    .col-md-5th-offset-5 {
      margin-left: 100%;
    }
  
    .col-md-5th-offset-4 {margin-left: 80%;}
  
    .col-md-5th-offset-3 {margin-left: 60%;}
  
    .col-md-5th-offset-2 {margin-left: 40%;}
  
    .col-md-5th-offset-1 {margin-left: 20%;}
  
    .col-md-5th-offset-0 {margin-left: 0%;}

}

  @media (min-width: 1200px) {
    .col-lg-5th-1, .col-lg-5th-2, .col-lg-5th-3, .col-lg-5th-4 {float: left;}
  
    .col-lg-5th-5 {float: left;width: 100%;}
  
    .col-lg-5th-4 {width: 80%;}
  
    .col-lg-5th-3 {width: 60%;}
  
    .col-lg-5th-2 {width: 40%;}
  
    .col-lg-5th-1 {width: 20%;}
  
    .col-lg-5th-pull-5 {right: 100%;}
  
    .col-lg-5th-pull-4 {right: 80%;}
  
    .col-lg-5th-pull-3 {right: 60%;}
  
    .col-lg-5th-pull-2 {right: 40%;}
  
    .col-lg-5th-pull-1 {right: 20%;}
  
    .col-lg-5th-pull-0 {right: auto;}
  
    .col-lg-5th-push-5 {left: 100%;}
  
    .col-lg-5th-push-4 {left: 80%;}
  
    .col-lg-5th-push-3 {left: 60%;}
  
    .col-lg-5th-push-2 {left: 40%;}
  
    .col-lg-5th-push-1 {left: 20%;}
  
    .col-lg-5th-push-0 {left: auto;}
  
    .col-lg-5th-offset-5 {margin-left: 100%;}
  
    .col-lg-5th-offset-4 {margin-left: 80%;}
  
    .col-lg-5th-offset-3 {margin-left: 60%;}
  
    .col-lg-5th-offset-2 {margin-left: 40%;}
  
    .col-lg-5th-offset-1 {margin-left: 20%;}
  
    .col-lg-5th-offset-0 {margin-left: 0%;}
  }
  


/* -- Media Queries -- */
 
@media (max-width: 767px) {

}

@media (max-width: 766px) {

}

@media (max-width: 580px) {

}

@media (max-width: 660px) {

}


/* End Edge landing */

